fix: Address SonarCloud code smells on PR #96
- Explain the intentionally empty ALREADY_SYNCHRONOUS switch branch (S108).
- Use Stream.toList() instead of collect(Collectors.toList()) (S6204).
- Isolate the single invocation under test in assertThatThrownBy lambdas
  that previously mixed test-setup calls with the call expected to
  throw, in both the listener unit tests and the sync-producer
  integration tests (S5778).

Signed-off-by: Francisco Barbudo <franciscobru@ext.inditex.com>